--- a/public/index.html
+++ b/public/index.html
@@ -12,24 +12,24 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,600' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <!--<script src="js/vendor/modernizr-2.6.1.min.js"></script>-->
+        <link rel="stylesheet" href="/css/normalize.css">
+        <link rel="stylesheet" href="/css/main.css">
+        <!--<script src="/js/vendor/modernizr-2.6.1.min.js"></script>-->
     </head>
     <body>
         <!-- Add your site or application content here -->
         <div id="main">
           <header>
-            Fayolle Fleurs
+            <img class="logo" src="/img/logo-fayolle-fleurs.png" alt="Fayolle Fleurs" title="Fayolle Fleurs"/>
           </header>
           <nav>
             <ul>
-              <li><a href="#">Accueil</a></li>
-              <li><a href="#">A offrir</a></li>
-              <li><a href="#">Mariage</a></li>
-              <li><a href="#">Décès</a></li>
-              <li><a href="#">Entreprise</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="/accueil/">Accueil</a></li>
+              <li><a href="/offrir/">A offrir</a></li>
+              <li><a href="/mariage/">Mariage</a></li>
+              <li><a href="/deces/">Décès</a></li>
+              <li><a href="/entreprise/">Entreprise</a></li>
+              <li><a href="/contact/">Contact</a></li>
             </ul>
           </nav>
           <div id="content">
@@ -38,11 +38,13 @@
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
-        <!--<script src="js/plugins.js"></script>-->
-        <script src="pages.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/vendor/video-keep-proportion.js"></script>
+        <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
+        <!--<script src="/js/plugins.js"></script>-->
+        <script src="/pages.js"></script>
+        <script src="/js/vendor/underscore.js"></script>
+        <script src="/js/vendor/backbone.js"></script>
+        <script src="/js/main.js"></script>
+        <script src="/js/vendor/video-keep-proportion.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
