--- a/public/pages/accueil.html
+++ b/public/pages/accueil.html
@@ -1,4 +1,4 @@
-<iframe width="924" height="520" src="http://www.youtube.com/embed/rtLXMywe9Rk?rel=0" frameborder="0" allowfullscreen></iframe>
+<iframe src="http://player.vimeo.com/video/50946017?title=0&amp;byline=0&amp;portrait=0&amp;color=C0D860" width="924" height="520" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 <p>Fayolle Fleurs membre agrée <strong>Interflora</strong> à la Talaudière.</p>
 <p>Vous êtes invité, un bouquet va ravir votre hotesse</p>
 <p>Fayolle Fleur vous propose une palette de bouquet ronds, ou élancés, de couleurs vives ou pastelles.</p>
