--- a/public/pages/accueil.html
+++ b/public/pages/accueil.html
@@ -1,6 +1,6 @@
 <iframe src="http://player.vimeo.com/video/50946017?title=0&amp;byline=0&amp;portrait=0&amp;color=C0D860" width="924" height="520" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-<p>Fayolle Fleurs membre agrée <strong>Interflora</strong> à la Talaudière.</p>
-<p>Vous êtes invité, un bouquet va ravir votre hotesse</p>
-<p>Fayolle Fleur vous propose une palette de bouquet ronds, ou élancés, de couleurs vives ou pastelles.</p>
+<p>Fayolle Fleurs membre agrée <strong>INTERFLORA</strong> à la Talaudière.</p>
+<p>Vous êtes invité, un bouquet va ravir votre hotesse.</p>
+<p>Fayolle Fleurs vous propose une palette de bouquets ronds, ou élancés, de couleurs vives ou pastelles.</p>
 <p>Pour une visite à la maternité, Fayolle Fleurs vous confectionne des bouquets plein de tendresse pour féliciter les heureux parents.</p>
-<p>Fayolle Fleur vous propose d'embellir votre entreprise, avec quelques belles plantes ou un bouquet livré régulièrement pour agrémenter votre bureau ou celui de votre secrétaire.</p>
+<p>Fayolle Fleurs vous propose d'embellir votre entreprise, avec quelques belles plantes ou un bouquet livré régulièrement pour agrémenter votre bureau ou celui de votre secrétaire.</p>
