--- a/public/pages/accueil.html
+++ b/public/pages/accueil.html
@@ -1,4 +1,4 @@
-Fayolle Fleurs membre agrée <strong>INTERFLORA</strong> à la Talaudière.
+Fayolle Fleurs membre agréé <strong>INTERFLORA</strong> à la Talaudière.
 <iframe src="http://player.vimeo.com/video/50946017?title=0&amp;byline=0&amp;portrait=0&amp;color=C0D860" width="924" height="520" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 <p>Le dire avec des fleurs à chaque moment de la vie.</p>
 <p>Daniel Fayolle et ses collaboratrices vous accueillent dans un lieu fascinant de couleurs et de senteurs, et vous invitent à partager leur passion de la fleur.</p>
