--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -1,6 +1,6 @@
 <div class="section group">
   <div class="col span_2_of_5">
-  Pour tout évenement de la vie, nous vous invitons à venir découvrir notre boutique de fleurs.
+  Pour tout évènement de la vie, nous vous invitons à venir découvrir notre boutique de fleurs.
   <address id="coordonnee" class="vcard">
     <p>
       <strong><span class="fn org">Fayolle Fleurs</span></strong> <br />
