bigger is better for maps

--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -13,6 +13,6 @@
   </address>
   </div>
   <div class="col span_3_of_5">
-    <iframe width="300" height="150" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.fr/maps?ie=UTF8&amp;cid=13293086463677520266&amp;q=Fayolle+Fleurs&amp;gl=FR&amp;hl=fr&amp;t=m&amp;ll=45.479919,4.432726&amp;spn=0.004514,0.006437&amp;z=16&amp;output=embed"></iframe>
+    <iframe width="548" height="472" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.fr/maps?ie=UTF8&amp;cid=13293086463677520266&amp;q=Fayolle+Fleurs&amp;gl=FR&amp;hl=fr&amp;t=m&amp;source=embed&amp;ll=45.481047,4.433198&amp;spn=0.007101,0.011737&amp;z=16&amp;iwloc=A&amp;output=embed"></iframe>
   </div>
 </div>
