--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -9,7 +9,7 @@
           <span class="postal-code">42350</span> <span class="locality">La Talaudière</span></span>
         </a>
     </p>
-    <p>Nous assurons également les livraisons sur simple appel téléphonique au <span class="tel"><a href="tel:+33477536062">04 77 53 60 62</a></span>.</p>
+    <p>Nous assurons également les livraisons sur simple appel téléphonique au <span class="tel"><a href="tel:+33477536062">04 77 53 60 62</a></span>. CB acceptée par téléphone.</p>
   </address>
   </div>
   <div class="col span_3_of_5">
