--- a/public/pages/accueil.html
+++ b/public/pages/accueil.html
@@ -1,7 +1,7 @@
 Fayolle Fleurs membre agréé <strong>INTERFLORA</strong> à la Talaudière.  <br/>
 <br/>
-<iframe src="http://player.vimeo.com/video/50946017?title=0&amp;byline=0&amp;portrait=0&amp;color=C0D860" width="924" height="520" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+<iframe src="http://player.vimeo.com/video/50946017?title=0&amp;byline=0&amp;portrait=0&amp;color=C0D860" width="724" height="407" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 <p>Le dire avec des fleurs à chaque moment de la vie.</p>
 <p>Daniel Fayolle et ses collaboratrices vous accueillent dans un lieu fascinant de couleurs et de senteurs, et vous invitent à partager leur passion de la fleur.</p>
 <p>Un art de chaque jour; une fleur, un bouquet pour fêter une naissance, un anniversaire, un mariage, pour témoigner de sentiments d'amour, d'affection, jusqu'à ceux des regrets.</p>
-<p>Un conseil, une livraison, contactez-nous au 04 77 53 60 62</p>
+<p>Un conseil, une livraison, contactez-nous au 04 77 53 60 62. CB acceptée par téléphone.</p>
