--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Fayolle Fleurs</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <title>Fayolle Fleurs, fleuriste membre agréé INTERFLORA à la Talaudière.</title>
+        <meta name="description" content="Fayolle Fleurs" />
+        <meta name="viewport" content="width=device-width" />
+	<meta name="google-site-verification" content="gqzPB7-k039bH8rAR-dlmu5KcVNk1rFWtPcikAAjaD0" />
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,600' rel='stylesheet' type='text/css'>
